feat(lambda): Support application names with lambdas